[project]
name = "my_poker_engine"
version = "0.1.0"
description = "Multi-feature poker engine; WIP"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]